IaC/CCSIntranet-CloudFormation-Template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation Template for a High Availability Wagtail CMS using ECS Fargate with Parameterized Tags

Parameters:
  RDSPassword:
    Description: The password for the RDS instance
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 41
    ConstraintDescription: Must be between 8 and 41 characters long.

  RDSUsername:
    Description: The username for the RDS instance
    Type: String
    Default: masteruser

  RDSDBName:
    Description: The database name for the RDS instance
    Type: String
    Default: ccsintranetapp

  DockerImage:
    Description: The docker image name for the task
    Type: String
    Default: 480535739673.dkr.ecr.eu-west-2.amazonaws.com/ccs-intranet-dev:latest

  VPCCIDR:
    Description: The CIDR block for the VPC
    Type: String
    Default: 10.3.0.0/16

  PublicSubnet1CIDR:
    Description: CIDR block for Public Subnet 1
    Type: String
    Default: 10.3.1.0/24

  PublicSubnet2CIDR:
    Description: CIDR block for Public Subnet 2
    Type: String
    Default: 10.3.2.0/24

  PrivateSubnet1CIDR:
    Description: CIDR block for Private Subnet 1
    Type: String
    Default: 10.3.3.0/24

  PrivateSubnet2CIDR:
    Description: CIDR block for Private Subnet 2
    Type: String
    Default: 10.3.4.0/24

  DBInstanceType:
    Description: Database Instance Type
    Type: String
    Default: db.r5.large

  WAFWebACLParam:
    Description: The ARN of the WAF Web ACL
    Type: String

  YourCertificateArn:
    Description: The ARN of the ACM certificate for the ALB
    Type: String

  DjangoSettingsModule:
    Description: Django Settings Module for test env
    Type: String
    Default: ccsintranet.settings.dev

  TagName:
    Description: The Name tag for all resources
    Type: String
    Default: test-wagtail-ccs-intranet

Resources:
  # VPC Setup
  WagtailVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref TagName

  # Public Subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WagtailVPC
      CidrBlock: !Ref PublicSubnet1CIDR
      AvailabilityZone: !Select [ 0, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Ref TagName

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WagtailVPC
      CidrBlock: !Ref PublicSubnet2CIDR
      AvailabilityZone: !Select [ 1, !GetAZs ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Ref TagName

  # Private Subnets
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WagtailVPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone: !Select [ 0, !GetAZs ]
      Tags:
        - Key: Name
          Value: !Ref TagName

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WagtailVPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone: !Select [ 1, !GetAZs ]
      Tags:
        - Key: Name
          Value: !Ref TagName

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref TagName

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref WagtailVPC
      InternetGatewayId: !Ref InternetGateway

  # Route Tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WagtailVPC
      Tags:
        - Key: Name
          Value: !Ref TagName

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  # NAT Gateway
  NatEIP:
    Type: AWS::EC2::EIP
    DependsOn: AttachInternetGateway
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Ref TagName

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Ref TagName

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WagtailVPC
      Tags:
        - Key: Name
          Value: !Ref TagName

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WagtailVPC
      Tags:
        - Key: Name
          Value: !Ref TagName

  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  # Database Security Group
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to RDS
      VpcId: !Ref WagtailVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: !Ref VPCCIDR
      Tags:
        - Key: Name
          Value: !Ref TagName

  # Load Balancer Security Group
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and HTTPS access to the ALB
      VpcId: !Ref WagtailVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Ref TagName

  # WAF Web ACL
  WagtailWAFWebACL:
    Type: AWS::WAFv2::WebACL
    Properties:
      Scope: REGIONAL
      DefaultAction:
        Allow: {}
      Description: Web ACL for the WAGTAIL application
      Name: !Sub "${TagName}-WebACL"
      VisibilityConfig:
        SampledRequestsEnabled: true
        CloudWatchMetricsEnabled: true
        MetricName: !Sub "${TagName}-WebACL"
      Rules: [] # Add rules as necessary

  # WAF Association with ALB
  WAFWebACLAssociation:
    Type: AWS::WAFv2::WebACLAssociation
    Properties:
      WebACLArn: !GetAtt WagtailWAFWebACL.Arn
      ResourceArn: !Ref ApplicationLoadBalancer

  # ECS Task Security Group
  TaskSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ECS tasks to communicate internally
      VpcId: !Ref WagtailVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          SourceSecurityGroupId: !Ref ALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref RDSSecurityGroup
      Tags:
        - Key: Name
          Value: !Ref TagName

  # ECS Cluster
  WagtailCluster:
    Type: AWS::ECS::Cluster
    Properties:
      Tags:
        - Key: Name
          Value: !Ref TagName

  # Application Load Balancer
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
      Tags:
        - Key: Name
          Value: !Ref TagName

  # Application Load Balancer Listener with ACM Certificate
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Protocol: HTTPS
      Port: 443
      Certificates:
        - CertificateArn: !Ref YourCertificateArn
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /
      Port: 8000
      Protocol: HTTP
      VpcId: !Ref WagtailVPC
      TargetType: ip
      Tags:
        - Key: Name
          Value: !Ref TagName

  # RDS Instance
  MyDBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: test-wagtail-ccs-intranet
      AllocatedStorage: '20'
      DBInstanceClass: !Ref DBInstanceType
      Engine: postgres
      MasterUsername: !Ref RDSUsername
      MasterUserPassword: !Ref RDSPassword
      VPCSecurityGroups:
        - !Ref RDSSecurityGroup
      DBSubnetGroupName: !Ref MyDBSubnetGroup
      MultiAZ: true
      EngineVersion: '13.18'
      DBName: !Ref RDSDBName
      Tags:
        - Key: Name
          Value: !Ref TagName

  MyDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnets available for the RDS DB Instance
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Ref TagName

  # IAM Role for ECS Task Execution
  ECSExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      Tags:
        - Key: Name
          Value: !Ref TagName

  # ECS Task Definition
  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: WagtailFargateTask-Test
      Cpu: '512'
      Memory: '1024'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      ExecutionRoleArn: !GetAtt ECSExecutionRole.Arn
      ContainerDefinitions:
        - Name: wagtail
          Image: !Ref DockerImage
          PortMappings:
            - ContainerPort: 8000
          Environment:
            - Name: DJANGO_SETTINGS_MODULE
              Value: !Ref DjangoSettingsModule
            - Name: RDS_HOST
              Value: !GetAtt MyDBInstance.Endpoint.Address
            - Name: RDS_DB_NAME
              Value: !Ref RDSDBName
            - Name: RDS_USERNAME
              Value: !Ref RDSUsername
            - Name: RDS_PASSWORD
              Value: !Ref RDSPassword
            - Name: DATABASE_URL
              Value:
                Fn::Join:
                  - ''
                  - - 'postgres://'
                    - !Ref RDSUsername
                    - ':'
                    - !Ref RDSPassword
                    - '@'
                    - !GetAtt MyDBInstance.Endpoint.Address
                    - '/'
                    - !Ref RDSDBName
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: /ecs/test/wagtail
              awslogs-region: !Ref 'AWS::Region'
              awslogs-stream-prefix: ecs
      Tags:
        - Key: Name
          Value: !Ref TagName

  # ECS Service
  WagtailService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref WagtailCluster
      DesiredCount: 2
      LaunchType: FARGATE
      TaskDefinition: !Ref TaskDefinition
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref PrivateSubnet1
            - !Ref PrivateSubnet2
          SecurityGroups:
            - !Ref TaskSecurityGroup
      LoadBalancers:
        - ContainerName: wagtail
          ContainerPort: 8000
          TargetGroupArn: !Ref ALBTargetGroup
      Tags:
        - Key: Name
          Value: !Ref TagName
